<resources>
    <string name="app_name">SnitchApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment1111111111111111111111111111111111111111111111111111111111111111111111111111111111</string>
    <string name="hello_blank_fragment_2">Hello blank fragment2222222222222222222222222222222222222222222222222222222222222222222222222222222222</string>
    <string name="hello_blank_fragment_3">Hello blank fragment333333333333333333333333333333333333333333333333333333333333333333</string>
    <string name="sign_up_in">Sign Up/In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email_address">Email address</string>
    <string name="save">Save</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="none">None</string>
</resources>
