<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment2">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/editprofile_button"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:text="@string/edit_profile" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_marginTop="405dp"
        android:text="@string/email"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="459dp"
        android:layout_marginEnd="91dp"
        android:text="@string/phone"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/view_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp" />

    <TextView
        android:id="@+id/view_name"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_alignStart="@+id/view_phone"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-86dp"
        android:layout_marginTop="324dp"
        android:text="@string/none"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/view_email"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="-218dp"
        android:layout_toStartOf="@+id/view_surname"
        android:text="@string/none"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/view_phone"
        android:layout_width="249dp"
        android:layout_height="53dp"
        android:layout_alignStart="@+id/view_email"
        android:layout_alignParentTop="true"
        android:layout_marginTop="473dp"
        android:text="@string/none"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/avatar_view"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/view_email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="108dp"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:layout_marginTop="-326dp"
        android:src="@drawable/common_google_signin_btn_icon_dark" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/take_surname"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="251dp"
        android:text="None"
        android:textSize="24sp" />

</RelativeLayout>